<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <POU Name="PRG_OverridePressure" Id="{21e5fc14-89ca-42fb-9669-1519ab1832f3}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_OverridePressure
VAR
	fb_SetPressure : FB_SetChamberPressure; 
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[fb_SetPressure(chamber := stVl_Proto, rNewPressure := New_Pressure, Override:= Global_OverridePressure);]]></ST>
    </Implementation>
    <LineIds Name="PRG_OverridePressure">
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>